--- a/src/layouts/basicLayout/BasicLayout.scss
+++ b/src/layouts/basicLayout/BasicLayout.scss
@@ -10,4 +10,6 @@
   min-height: 100vh;
   background-color: #ffffff;
   max-width: 1080px;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
